@@ -1,3 +1,8 @@
+2004-02-18  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* vpflib/strfunc.c: leftjust() - avoid use of strcpy() for overlapping
+	string moves.  Reported by Craig Bruce, verified with valgrind. 
+
 =============================================================================
 
 2003-12-15  Frank Warmerdam  <warmerdam@pobox.com>
